2002-04-11 08:07  nando

	* download.html (1.4.2.1), nextrelease.html (1.5.2.1): updated for
	new release

2002-04-09 09:17  nando

	* ChangeLog.txt (1.4): updated

2002-04-08 11:38  nando

	* nextrelease.html (1.7): fixed links

2002-04-08 10:35  nando

	* nextrelease.html (1.6): getting ready for the next release

2002-04-08 10:26  nando

	* nextrelease.html (1.5): getting ready for 1.1

2002-04-08 08:15  nando

	* ChangeLog.txt (1.3): updated

2002-04-08 07:47  nando

	* ChangeLog.txt (1.2): updated

2002-03-19 14:45  nando

	* cvs.html (1.2), download.html (1.3), index.html (1.5),
	license.html (1.2), mailinglists.html (1.2), nextrelease.html
	(1.3), snapshot.html (1.2), xlwtablehead.inc (1.2), cvs.html (1.3),
	download.html (1.4), index.html (1.6), license.html (1.3),
	mailinglists.html (1.3), nextrelease.html (1.4), snapshot.html
	(1.3), xlwtablehead.inc (1.3): added latest CVS snapshot

2002-03-15 08:39  nando

	* nextrelease.html (1.2): getting ready for the new release

2002-03-15 08:02  nando

	* index.html (1.4): title fixed

2002-03-14 14:26  nando

	* index.html (1.3): added Jerome's email link

2002-03-14 08:58  nando

	* ChangeLog.txt (1.1): added

2002-03-12 13:29  nando

	* download.html (1.2), index.html (1.2), webpublish.bat (1.2):
	updated

2002-03-12 12:29  nando

	* cvs.html (1.1), download.html (1.1), index.html (1.1),
	license.html (1.1), mailinglists.html (1.1), nextrelease.html
	(1.1), readme.txt (1.1), snapshot.html (1.1), webchecker.py (1.1),
	webclean.py (1.1), webdocupdate.bat (1.1), webimagesupdate.bat
	(1.1), webpublish.bat (1.1), webrootupdate.bat (1.1),
	webstylesupdate.bat (1.1), xlwmeta.inc (1.1), xlwtablefoot.inc
	(1.1), xlwtablehead.inc (1.1), styles/xlw.css (1.1): Initial
	revision

2002-03-12 12:29  nando

	* cvs.html (1.1.1.1), download.html (1.1.1.1), index.html
	(1.1.1.1), license.html (1.1.1.1), mailinglists.html (1.1.1.1),
	nextrelease.html (1.1.1.1), readme.txt (1.1.1.1), snapshot.html