@@ -137,20 +137,20 @@ following files:</p>
 
 <ul>
 <li><a href=
-"http://prdownloads.sourceforge.net/xlw/xlw-1.1.0-full-inst.exe">xlw-1.1.0-full-inst.exe</a>
+"http://prdownloads.sourceforge.net/xlw/XLW-1.1.0-full-inst.exe">XLW-1.1.0-full-inst.exe</a>
 (986 KB): this is the main Win32 distribution file. It includes
 binaries, source code, documentation, and examples.</li>
 
 <li><a href=
-"http://prdownloads.sourceforge.net/xlw/xlw-1.1.0-src.zip">xlw-1.1.0-src.zip</a>
+"http://prdownloads.sourceforge.net/xlw/XLW-1.1.0-src.zip">XLW-1.1.0-src.zip</a>
 (106 KB): zipped source code.</li>
 
 <li><a href=
-"http://prdownloads.sourceforge.net/xlw/xlw-1.1.0-light-inst.exe">xlw-1.1.0-light-inst.exe</a>
+"http://prdownloads.sourceforge.net/xlw/XLW-1.1.0-light-inst.exe">XLW-1.1.0-light-inst.exe</a>
 (121 MB): small installer with binaries only.</li>
 
 <li><a href=
-"http://prdownloads.sourceforge.net/xlw/xlw-1.1.0-debug.zip">xlw-1.1.0-debug.zip</a>
+"http://prdownloads.sourceforge.net/xlw/XLW-1.1.0-debug.zip">XLW-1.1.0-debug.zip</a>
 (426 KB): debug libraries.</li>
 </ul>
 </li>
@@ -159,26 +159,26 @@ binaries, source code, documentation, and examples.</li>
 "xlwdocs"></a>Documentation</strong><br>
 <ul>
 <li><a href=
-"http://prdownloads.sourceforge.net/xlw/xlw-1.1.0-docs-html.zip">xlw-1.1.0-docs-html.zip</a>
-(412 KB): zipped html documentation.</li>
+"http://prdownloads.sourceforge.net/xlw/XLW-1.1.0-docs-html.zip">XLW-1.1.0-docs-html.zip</a>
+(1 MB): zipped html documentation.</li>
 
 <li><a href=
-"http://prdownloads.sourceforge.net/xlw/xlw-1.1.0-docs-refman.chm">xlw-1.1.0-docs-refman.chm</a>
+"http://prdownloads.sourceforge.net/xlw/XLW-1.1.0-docs-refman.chm">XLW-1.1.0-docs-refman.chm</a>
 (331 KB): WinHelp documentation.</li>
 
 <li><a href=
-"http://prdownloads.sourceforge.net/xlw/xlw-1.1.0-docs-refman.pdf.zip">
-xlw-1.1.0-docs-refman.pdf.zip</a> (233 KB): zipped pdf
+"http://prdownloads.sourceforge.net/xlw/XLW-1.1.0-docs-refman.pdf.zip">
+XLW-1.1.0-docs-refman.pdf.zip</a> (233 KB): zipped pdf
 documentation.</li>
 
 <li><a href=
-"http://prdownloads.sourceforge.net/xlw/xlw-1.1.0-docs-refman.ps.zip">
-xlw-1.1.0-docs-refman.ps.zip</a> (101 KB): zipped ps
+"http://prdownloads.sourceforge.net/xlw/XLW-1.1.0-docs-refman.ps.zip">
+XLW-1.1.0-docs-refman.ps.zip</a> (101 KB): zipped ps
 documentation.</li>
 
 <li><a href=
-"http://prdownloads.sourceforge.net/xlw/xlw-1.1.0-docs-refman.dvi.zip">
-xlw-1.1.0-docs-refman.dvi.zip</a> (53 KB): zipped dvi
+"http://prdownloads.sourceforge.net/xlw/XLW-1.1.0-docs-refman.dvi.zip">
+XLW-1.1.0-docs-refman.dvi.zip</a> (53 KB): zipped dvi
 documentation.</li>
 </ul>
 </li>
