@@ -4,7 +4,7 @@
 # General configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = "XLW"
-PROJECT_NUMBER         = 1.1.1a0-cvs
+PROJECT_NUMBER         = 1.1.0
 OUTPUT_DIRECTORY       =
 OUTPUT_LANGUAGE        = English
 EXTRACT_ALL            = NO
