@@ -1,26 +1,0 @@
-
-merge relevant branches, if any
-purge headers
-purge warnings
-check for tab
-first update of news and history (also python and ruby)
-first ChangeLog update
-set version number (do not forget trailing f0!!!)
-branch out of the trunk
-update version number on the trunk
-update xlw-site repository (nextrelease, download, etc.)
-test and bug fixing on the branch
-review documentation
-create hidden sourceforge.net release
-last minute update of news.txt, history.txt, ChangeLog.txt, history.docs
-update news, changelog and date on the SF release page
-upload files on sourceforge.net
-fill in the files' size on the download page
-check that the new files download correctly
-upload new version of xlw.sf.net
-update documentation linked by xlw.sf.net
-unhide new release, send a notice to the SF users monitoring the packages
-news on sourceforge.net
-email xlw-users, xlw-announce, quantlib-users
-update freshmeat
-merge into trunk any branch change
