@@ -1,3 +1,7 @@
+2002-04-11 08:09  nando
+
+	* ChangeLog.txt (1.5): updated
+
 2002-04-11 08:07  nando
 
 	* download.html (1.4.2.1), nextrelease.html (1.5.2.1): updated for
